# explainable-medication-recommender

./: .cursorignore  .cursorindexingignore  .editorconfig  .env.example  .gitattributes  .gitignore  AGENT-MEMORY.md  AGENT-SKILLS.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODEOWNERS  CODE_REVIEW.md  CODING-STANDARDS.md  CONTRIBUTING.md  DataAnalysis.ipynb  PLANS.md  README.md  SECURITY.md  TESTING.md  WORKFLOWS.md  data_preprocessing.py  main.py  medication_ranking_model.py  metrics.json  pyproject.toml  xgboost_medication_ranker.py
.codex/: config.toml
Documentation/: CalculcoSetup.example.md  CalculcoSetup.md  Candidatelist.md  CodexPLAN.md  CodexPLANStep10GraphHybridReadiness.md  ConditionNormalization.md  DataFoundationRoadmap.md  DatasetDetail.md  Datasets Details & Explanations.docx  ExplanationOfModules.md  HybridModelFeatureStrategy.md  InitialPlan.md  Milestone5.md  Milestone6.md  Milestone6FeatureLabelDictionary.md  Milestone6MaterializationReview.md  Milestone7.md  Milestone8.md  Milestone8B.md  OldResearchDetail.md  PosterPresentationGuide.md  PreprocessingPlan.md  Research Work-RecommenderSystem.odt  ResearchDetail.md  SepsisCohortAndIndexConditionPolicy.md  TrainingPlan.md  milestone9.md  milestone9failure.md  worknotes.txt
notebooks/: 03_harmonization_and_overlap.ipynb  04_graph_suitability.ipynb
pipeline/: __init__.py  artifact_metadata.py  build_training_table.py  cohort.py  config.py  eda_summary.py  eicu_extract.py  evaluate_baselines.py  extract_utils.py  feature_gate_review.py  features.py  gate_recovery.py  graph_ablation.py  (+12 more)
(+72 files in other folders)
