[project]
name = "researchmodule"
version = "0.1.0"
description = "Research foundation for an explainable conversational medication recommender"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "duckdb>=1.5.3",
    "pyarrow>=24.0.0",
    "missingno>=0.5.2",
    "networkx>=3.6.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]

[tool.ruff]
target-version = "py313"
extend-exclude = [
    ".uv-cache",
    ".venv",
    "Dataset",
    "DepreciatedCode",
    "reports",
    "scripts/calculco/logs",
]
